--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
       <div class="logo">HELLO WORLD</div>
       <div class="nav-items">
-        <a href="blog.html">Blog</a> <a href="https://github.com/manuemmanuel">Github</a> <a href="contact.html">Contact</a>
+        <a href="404.html">Blog</a> <a href="https://github.com/manuemmanuel">Github</a> <a href="contact.html">Contact</a>
       </div>
     </nav>
     <section class="hero">
