--- a/404.html
+++ b/404.html
@@ -1,3 +1,9 @@
----
-permalink: /404.html
----
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>404 Not found</title>
+    <link rel="stylesheet" href="404.css" />
+  </head>
+</html>
