--- a/404.html
+++ b/404.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>404 Not found</title>
-    <link rel="stylesheet" href="404.css" />
+    <style>
+p {
+  background-image: url('404.svg');
+}
+</style>
   </head>
 </html>
